--- a/configs/zynq_vvt_rau_defconfig
+++ b/configs/zynq_vvt_rau_defconfig
@@ -433,8 +433,9 @@ CONFIG_CMD_FPGA_LOADP=y
 # CONFIG_CMD_FPGAD is not set
 # CONFIG_CMD_FUSE is not set
 CONFIG_CMD_GPIO=y
-# CONFIG_CMD_GPT is not set
-# CONFIG_RANDOM_UUID is not set
+CONFIG_CMD_GPT=y
+CONFIG_RANDOM_UUID=y
+CONFIG_CMD_GPT_RENAME=y
 # CONFIG_CMD_IDE is not set
 # CONFIG_CMD_IO is not set
 # CONFIG_CMD_IOTRACE is not set
